@@ -3544,6 +3544,8 @@ $wgMessageStructure = array(
 	'CoreParserFunctions' => array(
 		'unknown_extension_tag',
 		'duplicate-defaultsort',
+		'duplicate-defaultcollation',
+		'defaultcollation-notcategory',
 	),
 	'version' => array(
 		'version',
