@@ -20,6 +20,8 @@ production.
 * Added ContentHandler facility to allow extensions to support other content than wikitext.
   See docs/contenthandler.txt for details.
 * (bug 35378) Support multiple collations at the same time.
+* (bug 28397) New magic word "{{DEFAULTCOLLATION:}}" to specify the default
+  collation to use for a category.
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
